# MLinPhysics

./: .gitignore  README.md  dev.py  main.py  pyproject.toml  test_performance.py
docs/: UI.md  colision.md  forces.md
labs/lab1/: lab1.md
labs/lab2/: bead.html  lab2.md  many_beads.html
labs/lab3/: example.html
physics_sim/: __init__.py
physics_sim/core/: __init__.py  engine.py  entity.py  force.py  layout_region.py  renderer.py  vector.py
physics_sim/engines/: __init__.py  legacy_numpy_engine.py  numpy_engine.py  pymunk_engine.py
physics_sim/engines/numpy_engine/: __init__.py  boundary_mixin.py  broadphase_mixin.py  bvh.py  collision_mixin.py  constants.py  data_export_mixin.py  energy_mixin.py  engine.py  entity_api_mixin.py  force_mixin.py  integration_mixin.py  pbd_mixin.py  storage_mixin.py  types.py
physics_sim/entities/: __init__.py  anchor_point.py  ball.py  explosion_emitter.py  obstacle.py
physics_sim/forces/: __init__.py  central_gravity.py  custom_force.py  drag.py  explosion_impulse.py  gravity.py  linear_gravity.py  pairwise_distance_pbd.py  spring_tether_pbd.py  thrust.py  vortex.py  wire_constraint_pbd.py
physics_sim/input/: __init__.py  handler.py
physics_sim/rendering/: __init__.py  _forces_renderer_mixin.py  _grid_renderer_mixin.py  _pause_manager_mixin.py  _shape_renderer_mixin.py  arcade_renderer.py  camera.py
physics_sim/simulation/: __init__.py  config.py  simulator.py
physics_sim/ui/: __init__.py  control_panel.py  entity_selector.py  inventory_panel.py  layout.py  placeholder_panel.py  utils.py
plan/: lab3.md  plan.md
(+17 files in other folders)
