[project]
name = "physics-sim"
version = "0.1.0"
description = "Modular physics simulation framework with pluggable engines"
requires-python = ">=3.13.7"
dependencies = [
    "arcade>=3.3.3",
    "base-conversion-kit>=1.0.7",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]


[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]

